--- a/Frontend/apps/admin/src/app/components/update-password/update-password.component.html
+++ b/Frontend/apps/admin/src/app/components/update-password/update-password.component.html
@@ -1,87 +1,86 @@
-<h3 class="text-2xl font-bold mb-4 text-my-blue">Đổi mật khẩu</h3>
+<h3 class="text-2xl font-bold mb-4 text-my-purple">Đổi mật khẩu</h3>
 <form [formGroup]="passwordForm" class="space-y-4">
-  <label for="oldPassword" class="flex items-center space-x-3 text-gray-700">
-    <span class="min-w-[140px]">Mật khẩu cũ:</span>
-    <div class="min-w-[500px]">
+  <label for="oldPasswordId" class="flex items-center space-x-3 text-gray-700">
+    <span class="w-[25%]">Mật khẩu cũ:</span>
+    <div class="w-[70%]">
       <lib-password-input
-        id="oldPassword"
+        inputId="oldPasswordId"
         formControlName="oldPassword"
         containerClass="flex-1"
-        [inputNgClass]="{
-         'border rounded-lg p-2 focus:outline-none focus:ring focus:border-myblue w-full': true,
-         'bg-gray-300 cursor-not-allowed caret-transparent': !editMode,
-        }"
-        [readonly]="!editMode"
-        [disabled]="!editMode"
+        visibilityClass="right-2"
+        [inputNgClass]="passwordInputClass"
+        [inputReadonly]="!editMode"
+        [inputDisabled]="!editMode"
       ></lib-password-input>
 
       @if (editMode && passwordFH.isInvalid('oldPassword')) {
         @if (passwordFH.hasError('oldPassword', 'required')) {
-          <p class="error max-w-[500px]">{{ userMessage.OLD_PASSWORD__REQUIRED }}</p>
+          <p class="error">{{ userMessage.OLD_PASSWORD__REQUIRED }}</p>
         } @else if (passwordFH.hasError('oldPassword', 'pattern') ||
         passwordFH.hasError('oldPassword', 'minlength') ||
         passwordFH.hasError('oldPassword', 'maxlength')) {
-          <p class="error max-w-[500px]">{{ userMessage.OLD_PASSWORD__INVALID }}</p>
+          <p class="error">{{ userMessage.OLD_PASSWORD__INVALID }}</p>
         }
       }
-
     </div>
   </label>
 
-  <label class="flex items-center space-x-3 text-gray-700">
-    <span class="min-w-[140px]">Mật khẩu mới:</span>
-    <div class="min-w-[500px]">
-      <input
-        type="password"
+  <label for="newPasswordId" class="flex items-center space-x-3 text-gray-700">
+    <span class="w-[25%]">Mật khẩu mới:</span>
+    <div class="w-[70%]">
+      <lib-password-input
+        inputId="newPasswordId"
         formControlName="newPassword"
-        [ngClass]="{
-         'flex-1 border rounded-lg p-2 focus:outline-none focus:ring focus:border-myblue w-full': true,
-         'cursor-not-allowed caret-transparent bg-gray-300': !editMode
-        }"
-        [readonly]="!editMode"
-        [disabled]="!editMode"
-      />
+        containerClass="flex-1"
+        visibilityClass="right-2"
+        [inputNgClass]="passwordInputClass"
+        [inputReadonly]="!editMode"
+        [inputDisabled]="!editMode"
+      ></lib-password-input>
 
       @if (editMode && passwordFH.isInvalid('newPassword')) {
         @if (passwordFH.hasError('newPassword', 'required')) {
-          <p class="error max-w-[500px]">{{ userMessage.NEW_PASSWORD__REQUIRED }}</p>
+          <p class="error">{{ userMessage.NEW_PASSWORD__REQUIRED }}</p>
         } @else if (passwordFH.hasError('newPassword', 'pattern') ||
         passwordFH.hasError('newPassword', 'minlength') ||
         passwordFH.hasError('newPassword', 'maxlength')) {
-          <p class="error max-w-[500px]">{{ userMessage.NEW_PASSWORD__INVALID }}</p>
+          <p class="error">{{ userMessage.NEW_PASSWORD__INVALID }}</p>
+        } @else if (passwordForm.get('newPassword')?.value === passwordForm.get('oldPassword')?.value) {
+          <p class="error">{{ userMessage.NEW_PASSWORD__DUPLICATE }}</p>
         }
       }
     </div>
   </label>
 
-  <label class="flex items-center space-x-3 text-gray-700">
-    <span class="min-w-[140px]">Xác nhận mật khẩu:</span>
-    <div class="min-w-[500px]">
-      <input
-        type="password"
+  <label for="confirmNewPasswordId" class="flex items-center space-x-3 text-gray-700">
+    <span class="w-[25%]">Xác nhận mật khẩu:</span>
+    <div class="w-[70%]">
+      <lib-password-input
+        inputId="confirmNewPasswordId"
         formControlName="confirmNewPassword"
-        [ngClass]="{
-         'flex-1 border rounded-lg p-2 focus:outline-none focus:ring focus:border-myblue w-full': true,
-         'cursor-not-allowed caret-transparent bg-gray-300': !editMode
-        }"
-        [readonly]="!editMode"
-        [disabled]="!editMode"
-      />
+        containerClass="flex-1"
+        visibilityClass="right-2"
+        [inputNgClass]="passwordInputClass"
+        [inputReadonly]="!editMode"
+        [inputDisabled]="!editMode"
+      ></lib-password-input>
 
       @if (editMode && passwordFH.isInvalid('confirmNewPassword')) {
         @if (passwordFH.hasError('confirmNewPassword', 'required')) {
-          <p class="error max-w-[500px]">{{ userMessage.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
+          <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
         } @else if (passwordFH.hasError('confirmNewPassword', 'pattern') ||
         passwordFH.hasError('confirmNewPassword', 'minlength') ||
         passwordFH.hasError('confirmNewPassword', 'maxlength')) {
-          <p class="error max-w-[500px]">{{ userMessage.CONFIRM_NEW_PASSWORD__INVALID }}</p>
+          <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__INVALID }}</p>
+        } @else if (passwordForm.get('confirmNewPassword')?.value === passwordForm.get('newPassword')?.value) {
+          <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__NOT_MATCH }}</p>
         }
       }
     </div>
   </label>
 
   @if (editMode) {
-    <div class="flex space-x-2 mt-4">
+    <div class="flex justify-end space-x-2 mr-[3%]">
       <lib-action-button
         name="save"
         mainTitle="Lưu"
