--- a/Frontend/apps/admin/src/app/components/update-user-info/update-user-info.component.html
+++ b/Frontend/apps/admin/src/app/components/update-user-info/update-user-info.component.html
@@ -1,8 +1,8 @@
 <h3 class="text-2xl font-bold mb-4 text-my-blue">Thông tin cá nhân</h3>
 <form [formGroup]="userInfoForm" class="space-y-4">
   <label class="flex items-center space-x-3 text-gray-700">
-    <span class="min-w-[140px]">Họ:</span>
-    <div class="min-w-[500px]">
+    <span class="w-[20%]">Họ:</span>
+    <div class="w-[70%]">
       <input
         type="text"
         formControlName="lastName"
@@ -16,17 +16,17 @@
 
       @if (editMode && userInfoFH.isInvalid('lastName')) {
         @if (userInfoFH.hasError('lastName', 'required')) {
-          <p class="error max-w-[500px]">{{ userMessage.LAST_NAME__REQUIRED }}</p>
+          <p class="error">{{ userMessage.LAST_NAME__REQUIRED }}</p>
         } @else if (userInfoFH.hasError('lastName', 'maxlength')) {
-          <p class="error max-w-[500px]">{{ userMessage.LAST_NAME__TOO_LONG }}</p>
+          <p class="error">{{ userMessage.LAST_NAME__TOO_LONG }}</p>
         }
       }
     </div>
   </label>
 
   <label class="flex items-center space-x-3 text-gray-700">
-    <span class="min-w-[140px]">Tên:</span>
-    <div class="min-w-[500px]">
+    <span class="w-[20%]">Tên:</span>
+    <div class="w-[70%]">
       <input
         type="text"
         formControlName="firstName"
@@ -40,17 +40,17 @@
 
       @if (editMode && userInfoFH.isInvalid('firstName')) {
         @if (userInfoFH.hasError('firstName', 'required')) {
-          <p class="error max-w-[500px]">{{ userMessage.FIRST_NAME__REQUIRED }}</p>
+          <p class="error">{{ userMessage.FIRST_NAME__REQUIRED }}</p>
         } @else if (userInfoFH.hasError('firstName', 'maxlength')) {
-          <p class="error max-w-[500px]">{{ userMessage.FIRST_NAME__TOO_LONG }}</p>
+          <p class="error">{{ userMessage.FIRST_NAME__TOO_LONG }}</p>
         }
       }
     </div>
   </label>
 
   <label class="flex items-center space-x-3 text-gray-700">
-    <span class="min-w-[140px]">Ngày sinh (m/d/y):</span>
-    <div class="min-w-[500px]">
+    <span class="w-[20%]">Ngày sinh (m/d/y):</span>
+    <div class="w-[70%]">
       <input
         type="date"
         formControlName="dateOfBirth"
@@ -65,7 +65,7 @@
   </label>
 
   @if (editMode) {
-    <div class="flex space-x-2 mt-4">
+    <div class="flex justify-end space-x-2 mr-[8%]">
       <lib-action-button
         name="save"
         mainTitle="Lưu"
