--- a/Frontend/apps/admin/src/app/pages/login/login.component.html
+++ b/Frontend/apps/admin/src/app/pages/login/login.component.html
@@ -42,11 +42,13 @@
         <label for="password" class="block text-sm font-medium text-gray-700">
           Mật khẩu
         </label>
-        <div class="mt-1 flex items-center border border-gray-300 rounded-lg shadow-sm relative">
+        <div class="mt-1 flex items-center border border-gray-300 rounded-lg shadow-sm">
           <ng-icon name="matLockRound" class="ml-3 text-gray-600"></ng-icon>
           <lib-password-input
             formControlName="password"
-            class="flex-1 px-4 py-1 border-none rounded-lg focus:outline-none -ml-2"
+            containerClass="flex-1"
+            inputClass="px-4 py-2 border-none rounded-lg focus:outline-none w-full"
+            visibilityClass="-right-20"
           >
           </lib-password-input>
         </div>
