--- a/Frontend/global.css
+++ b/Frontend/global.css
@@ -21,13 +21,18 @@ body {
 }
 
 .error {
-  @apply text-red-500 text-sm mt-1 break-words
+  @apply text-red-500 text-sm mt-1 break-words max-w-[100%]
 }
 
-.toggle-show-hide-password-btn {
-  @apply absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700 focus:outline-none
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear,
+input[type="password"]::-webkit-textfield-decoration-container {
+  display: none !important;
 }
 
+input[type="password"] {
+  -webkit-text-security: disc !important;
+}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -38,23 +43,3 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-
-/* .toast {
-  @apply bg-blue-600 text-white p-4 rounded-lg;
-}
-
-.toast-success {
-  @apply bg-green-600;
-}
-
-.toast-error {
-  @apply bg-red-600;
-}
-
-.swal2-popup {
-  @apply bg-gray-900 text-white rounded-lg p-6;
-}
-
-.swal2-confirm {
-  @apply bg-green-600 text-white px-4 py-2 rounded;
-} */
