--- a/Frontend/libs/angular-libs/src/lib/components/password-input/password-input.component.html
+++ b/Frontend/libs/angular-libs/src/lib/components/password-input/password-input.component.html
@@ -1,20 +1,37 @@
 <div class="relative w-full" [class]="containerClass" [ngClass]="containerNgClass">
-  <input
-    [type]="isVisible ? 'text' : 'password'"
-    [placeholder]="placeholder"
-    [readonly]="readonly"
-    [disabled]="disabled"
-    [value]="value"
-    [class]="inputClass"
-    [ngClass]="inputNgClass"
-    (input)="onInput($event)"
-    (blur)="onTouched()"
-  />
-  @if (!disabled && !readonly) {
+  @if (!isVisible) {
+    <input
+      type="password"
+      [id]="inputId"
+      [placeholder]="inputPlaceholder"
+      [readonly]="inputReadonly"
+      [disabled]="inputDisabled"
+      [value]="inputValue"
+      [class]="inputClass"
+      [ngClass]="inputNgClass"
+      (input)="onInput($event)"
+      (blur)="onTouched()"
+    />
+  } @else {
+    <input
+      type="text"
+      [id]="inputId"
+      [placeholder]="inputPlaceholder"
+      [readonly]="inputReadonly"
+      [disabled]="inputDisabled"
+      [value]="inputValue"
+      [class]="inputClass"
+      [ngClass]="inputNgClass"
+      (input)="onInput($event)"
+      (blur)="onTouched()"
+    />
+  }
+  @if (!inputDisabled && !inputReadonly) {
     <button
       type="button"
       (click)="toggleVisibility()"
-      class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700 focus:outline-none z-50"
+      [class]="'absolute top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700 focus:outline-none z-50 ' + visibilityClass"
+      [ngClass]="visibilityNgClass"
     >
       <ng-icon
         [name]="isVisible ? 'matVisibilityOffRound' : 'matVisibilityRound'"
